--- a/style.css
+++ b/style.css
@@ -1,5 +1,36 @@
 body {
     margin: 0;
-    background: burlywood;
+    background-image: url("beans3.jpg");
     text-align: center;
 }
+
+/* The navbar container */
+.topnav {
+    display: flex; /* Use flexbox layout */
+    justify-content: center; /* Center the items horizontally */
+    align-items: center; /* Center the items vertically */
+    height: 8vh; /* Make the navbar cover the full viewport height */
+    background-color: #333;
+  }
+  
+  /* Container for links */
+  .links-container {
+    display: flex; /* Use flexbox layout */
+  }
+  
+  /* Navbar links */
+  .topnav a {
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Links - change color on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  
