--- a/alyssasVisualizations/styles.css
+++ b/alyssasVisualizations/styles.css
@@ -32,32 +32,10 @@ body {
     background-color: #ddd;
     color: black;
   }
-  
-  /* Apply styles to make JSON content fit the screen */
-body, html {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
 
-.container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  .tableauContainer {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    height: 100vh; /* Adjust as needed */
 }
-
-#json-content {
-  max-width: 90%;
-  max-height: 90%;
-  padding: 20px;
-  overflow: auto; /* Enable scrolling if content overflows */
-  background-color: #f0f0f0;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  white-space: pre-wrap; /* Preserve formatting */
-}
-
-  
