--- a/danielsVisualizations/styles.css
+++ b/danielsVisualizations/styles.css
@@ -19,7 +19,7 @@ body {
 /* Container for links */
 .links-container {
   display: flex; /* Use flexbox layout */
-  padding: 0 100px; /* Changes the distance between links */
+  padding: 0 5%; /* Changes the distance between links */
 }
 
 /* Navbar links */
@@ -75,11 +75,12 @@ body, html {
   text-align: center; /* Center the contents horizontally */
   width: 70%;
   /* max-width: 800px; Adjust the maximum width as needed */
-  height: auto;
+  height: 100%;
 }
 img {
   display: inline; /* Make the image a block element */
-  margin: 30px auto 10px; /* Center the image and add margin */
+  /* margin: 50px auto 10px; Center the image and add margin */
+  margin: 15% auto 10%;
   
 }
 
