--- a/style.css
+++ b/style.css
@@ -1,43 +1,43 @@
 body {
-    margin: 0;
-    background-image: url("beans3.jpg");
-    background-size: cover; /* Cover the entire viewport */
-    background-position: center; /* Center the background image */
-    background-attachment: fixed; 
-    text-align: center;
+  margin: 0;
+  background-image: url("beans3.jpg");
+  background-size: cover; /* Cover the entire viewport */
+  background-position: center; /* Center the background image */
+  background-attachment: fixed; 
+  text-align: center;
 }
 
 /* The navbar container */
 .topnav {
-    display: flex; /* Use flexbox layout */
-    justify-content: space-between; /* Center the items horizontally */
-    align-items: center; /* Center the items vertically */
-    height: 10vh; /* Make the navbar cover the full viewport height */
-    background-color: #333;
-  }
-  
-  /* Container for links */
-  .links-container {
-    display: flex; /* Use flexbox layout */
-    padding: 0 100px; /* Changes the distance between links */
-  }
-  
-  /* Navbar links */
-  .topnav a {
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* Links - change color on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Apply styles to make JSON content fit the screen */
+  display: flex; /* Use flexbox layout */
+  justify-content: space-between; /* Center the items horizontally */
+  align-items: center; /* Center the items vertically */
+  height: 10vh; /* Make the navbar cover the full viewport height */
+  background-color: #333;
+}
+
+/* Container for links */
+.links-container {
+  display: flex; /* Use flexbox layout */
+  padding: 0 5%; /* Changes the distance between links */
+}
+
+/* Navbar links */
+.topnav a {
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Links - change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Apply styles to make JSON content fit the screen */
 body, html {
   margin: 0;
   padding: 0;
@@ -73,12 +73,27 @@ body, html {
 
 .image-container {
   text-align: center; /* Center the contents horizontally */
-  }
-  img {
-    display: inline; /* Make the image a block element */
-    margin: 50px auto 10px; /* Center the image and add margin */
-    
-  }
+  width: 30%;
+  /* max-width: 800px; Adjust the maximum width as needed */
+  height: 100%;
+}
+img {
+  display: inline; /* Make the image a block element */
+  /* margin: 50px auto 10px; Center the image and add margin */
+  margin: 10% auto 5%;
+}
+
+.front-text-container {
+  text-align: center; /* Center the contents horizontally */
+  width: 20%;
+  /* max-width: 800px; Adjust the maximum width as needed */
+  height: 100%;
+}
+img {
+  display: inline; /* Make the image a block element */
+  /* margin: 50px auto 10px; Center the image and add margin */
+  margin: 10% auto 5%;
+}
 
 .text-container {
   display: flex;
@@ -87,14 +102,27 @@ body, html {
   justify-content: center;
   text-align: center;
 }
-  h3 {
-    display: inline-block; /* Make the text an inline-block element */
-    vertical-align: center; /* Align elements vertically */
-    margin-right: 10px; /* Add some spacing between elements */
-  }
-  p {
-    display: inline-block; /* Make the text an inline-block element */
-    vertical-align: top; /* Align elements vertically */
-    margin-right: 10px; /* Add some spacing between elements */
-  }
-  
+h3 {
+  display: inline-block; /* Make the text an inline-block element */
+  vertical-align: center; /* Align elements vertically */
+  /* margin-right: 10px; Add some spacing between elements */
+  margin-right: 5%;
+  margin: 0%;
+}
+p {
+  display: inline-block; /* Make the text an inline-block element */
+  vertical-align: top; /* Align elements vertically */
+  margin-right: 0%; /* Add some spacing between elements */
+}
+
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Adjust to desired height */
+}
+
+.tableauPlaceholder {
+  width: 80%;
+  height: 80%;
+}
