--- a/style.css
+++ b/style.css
@@ -85,14 +85,18 @@ img {
 
 .front-text-container {
   text-align: center; /* Center the contents horizontally */
-  width: 20%;
+  width: 50vh;
   /* max-width: 800px; Adjust the maximum width as needed */
-  height: 100%;
+  height: 50vh;
+  border: 2px solid brown; /* Add a border with brown color */
+  background-color: #f5deb3; /* Set the background color to a light brown */
+  padding: 5vh; /* Add padding inside the box */
+  box-sizing: border-box; /* Include padding and border in the element's total width 
 }
 img {
-  display: inline; /* Make the image a block element */
+  display:flex; /* Make the image a block element */
   /* margin: 50px auto 10px; Center the image and add margin */
-  margin: 10% auto 5%;
+  margin: 1% auto 1%;
 }
 
 .text-container {
