--- a/s.css
+++ b/s.css
@@ -26,12 +26,13 @@
 .text-container1 {
     display: flex;
     flex-direction: row;
-    padding: 0 5%;
+    padding: 0 25%;
     align-items: center;
     justify-content: center;
     text-align: center;
     margin: 0% auto;
     margin-bottom: 10px;
+    text-align: center;
     }
     h2 {
     display: inline; /* Make the text an inline-block element */
@@ -67,6 +68,8 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+
   }
   
   .popup-content {
@@ -75,7 +78,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     /* transform: translateX(0%); */
-    width: 70%;
+    width: 60%;
     height: 85%;
     background-color: white;
     padding: 20px;
@@ -83,6 +86,7 @@
     border-radius: 5px;
     z-index: 999;
     overflow-y: auto;
+    text-align: center;
   }
   
   .close {
@@ -94,7 +98,7 @@
 
  .clickable-box {
     text-align: center; /* Center the contents horizontally */
-    justify-content: space-between;
+    justify-content: center;
     width: 50vh;
     /* max-width: 800px; Adjust the maximum width as needed */
     height: 15vh;
@@ -105,6 +109,7 @@
     margin: 1% auto 1%;
     cursor: pointer; /* Change cursor to pointer on hover */
     color: black;
+    text-align: center;
 }
 
 .clickable-box:hover {
@@ -130,3 +135,40 @@
     transform: translate(-50%, -50%); /* Move the GIF back by half of its own width and height */
     z-index: -1;
 }
+
+/*==================================
+
+         FOR TEAM PHOTOS
+
+==================================*/
+.text-container2 {
+    display: flex;
+    flex-direction: row;
+    padding: 0 2%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 0% auto;
+    margin-bottom: 10px;
+    text-align: center;
+    }
+    h2 {
+    display: inline; /* Make the text an inline-block element */
+    vertical-align: center; /* Align elements vertically */
+    /* margin-right: 10px; Add some spacing between elements */
+    margin-right: 5%;
+    margin: 0%;
+    margin-bottom: 20%;
+    color: black;
+    }
+    h4 {
+    display: inline-block; /* Make the text an inline-block element */
+    vertical-align: center; /* Align elements vertically */
+    margin-right: 0%; /* Add some spacing between elements */
+    margin: 0;
+    color: black;
+    }
+    a {
+    text-decoration: none; /* Remove underline from the link */
+    text-transform: none;
+    }
